test/cases/error/nonassoc-chain.cba
-- == is non-associative and cannot be chained.
-- @expect-error: Non-associative
return (1 == 2 == 3)
